--- a/Paper Survey/readme
+++ b/Paper Survey/readme
@@ -1,1 +1,3 @@
 This is all the paper you should review in the class "Physical Deisgn"
+
+The content is only for academic research, if this violate your rights, please contact me and I will remove it immediately
